add portfolio link

--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
             <div class="hover-item">
               <h3>Portfolio Website</h3>
               <div class="icons">
-                <a href="" target="_blank">
+                <a href="https://github.com/varshabu/portfolio" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://varshabu.github.io/portfolio/" target="_blank">
                   <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </a>
               </div>
